# RivetLink-Application

./: .editorconfig  .gitignore  README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
.github/workflows/: appimage.yml  build.yml  check-2604.yml  release.yml
src/: App.vue  i18n.ts  main.ts  router.ts  store.ts  updates.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/metainfo/: com.rivetlink.app.metainfo.xml
src-tauri/pam/: rivetlink  rivetlink.rpm
src-tauri/src/: lib.rs  main.rs  settings.rs
src/components/: ConsentModal.vue  EditDeviceModal.vue  LanConnectModal.vue  TrustedKeyModal.vue  UpdateModal.vue
src/locales/: en_en.json  nl_nl.json
src/views/: Connect.vue  Onboarding.vue  OverlayBorder.vue  OverlayPanel.vue  Relays.vue  Resources.vue  Settings.vue  ThisDevice.vue  Viewer.vue
