[package]
name = "rivetlink-app"
version = "0.1.22"
description = "RivetLink desktop app"
authors = ["RivetLink"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin (Windows quirk,
# see https://github.com/rust-lang/cargo/issues/8519).
name = "rivetlink_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `devtools` keeps the web inspector available in release builds too (right-
# click -> Inspect Element). Drop it for a hardened production release.
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Start the app on OS login (Linux .desktop autostart / macOS LaunchAgent /
# Windows Run key) so an always-on host comes back up after a reboot.
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt", "net", "time"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
# Self-monitoring: the app's own CPU + memory for the Resources page. Pinned to
# 0.30 for its `refresh_process` API and byte-unit memory.
sysinfo = "0.30"
# Diagnostics: the SDK + agent log the LAN connect/handshake/capture path via
# `tracing`; the app installs a subscriber that writes to stderr AND a log file
# (app log dir) so a user can attach it when a connection misbehaves.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Local path deps while all crates sit side by side. For distribution these
# switch to a git dep or a crates.io release.
# - sdk: client-side LAN discovery/connect + crypto (all platforms).
rivetlink-sdk = { path = "../../RivetLink/crates/rivetlink-sdk" }

# - agent: host side (advertise + capture + serve) reused for in-app "receive
#   help". Pulls the native capture stack (scap/PipeWire) into the app build.
#   Linux + macOS only — scap 0.0.8's Windows backend doesn't build against
#   current windows-capture, and host streaming is Linux-focused anyway, so on
#   Windows the app stays client/viewer and start_host returns "not supported".
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
rivetlink-agent = { path = "../../RivetLink/crates/rivetlink-agent" }

# PAM, to verify the machine owner's OS login password before changing who may
# remotely access this device. Linux only for now (macOS/Windows use their own
# auth mechanisms when they become hosts). Needs libpam at build + runtime.
[target.'cfg(target_os = "linux")'.dependencies]
pam = "0.8"
